# para

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  README.rst  build.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: release.yaml  rust.yaml
benches/: bench.ps1
src/: main.rs  ppm.rs
