[package]
name = "para-cli"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Decoder and utility for the Flipnote Studios .ppm animation format."
readme = "README.rst"
homepage = "https://github.com/Usugata/para"
repository = "https://github.com/Usugata/para"
license = "MIT"
keywords = ["ppm", "nintendo-hacking", "flipnote", "flipnotestudio", "nintendo-dsi"]
categories = ["encoding"]

[[bin]]
name = "para"
path = "src/main.rs"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
# Constant `HashMap`
lazy_static = "1.4.0"

# Byte manipulation
byteorder = "1.4.3"

# Time
chrono = "0.4.19"

# Image encoding
image = "0.24.1"

# JSON encoding
serde_json = "1.0.79"

# Error handling
human-panic = "1.0.3"
