[package]
name = "para-cli"
version = "0.1.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Decoder and utility for the Flipnote Studios .ppm animation format."
readme = "README.md"
homepage = "https://github.com/Usugata/para"
repository = "https://github.com/Usugata/para"
license = "MIT"
keywords = ["ppm", "nintendo-hacking", "flipnote", "flipnotestudio", "nintendo-dsi"]
categories = ["encoding"]

[[bin]]
name = "para"
path = "src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"

[dependencies]
# Byte manipulation
byteorder = "1"

# Time
chrono = "0.4"

# Image encoding
image = "0.24"

# JSON encoding
serde_json = "1"

# Error handling
human-panic = "1"

# Lazy initialization
once_cell = "1"
